--- a/src/main/resources/openid-provider-sample-AAF.properties
+++ b/src/main/resources/openid-provider-sample-AAF.properties
@@ -5,35 +5,45 @@
 # 
 #
 # Needs to be 'openid'
-type=openid
-id=openid
+auth.method=openid
+
+# ID of the particular provider configuration
+provider.id=aaf
+
 # Name displayed in the UI
-name=OpenID Authentication Provider
+name=AAF
+
 # Toggle username & password login visibility
 disableUsernamePasswordLogin=false
-# List of providers that appear on the login page, see options below.
-enabled=aaf
-# Site URL - the main domain, needed to build the pre-established URL below.
+
+# Site URL - the main domain of the client site (i.e. your XNAT), needed to build the pre-established URL below.
+# If not specified, the plugin uses the value configured for the site URL in the system preferences.
 siteUrl=
 preEstablishedRedirUri=/openid-login
+
 # AAF OpenID
-openid.aaf.clientId=
-openid.aaf.clientSecret=
-openid.aaf.accessTokenUri=https://central.test.aaf.edu.au/providers/op/token
-openid.aaf.userAuthUri=https://central.test.aaf.edu.au/providers/op/authorize
-openid.aaf.scopes=openid,profile,email
-openid.aaf.link=<p>To sign-in using your AAF credentials, please click on the button below.</p><p><a href="/openid-login?providerId=aaf"><img src="/images/aaf_service_223x54.png" /></a></p>
-# Flag that sets if we should be checking email domains 
-openid.aaf.shouldFilterEmailDomains=true
+clientId=
+clientSecret=
+
+# URLs for accessing AAF's OAuth2 services
+accessTokenUri=https://central.test.aaf.edu.au/providers/op/token
+userAuthUri=https://central.test.aaf.edu.au/providers/op/authorize
+scopes=openid,profile,email
+link=<p>To sign-in using your AAF credentials, please click on the button below.</p><p><a href="/openid-login?providerId=aaf"><img src="/images/aaf_service_223x54.png" /></a></p>
+
+# Flag that sets if we should be checking email domains
+shouldFilterEmailDomains=true
 # Domains below are allowed to login, only checked when 'shouldFilterEmailDomains' is true
-openid.aaf.allowedEmailDomains=redboxresearchdata.com.au  
+allowedEmailDomains=redboxresearchdata.com.au  
+
 # Flag to force the user creation process, normally this should be set to true
-openid.aaf.forceUserCreate=true
+forceUserCreate=true
 # Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
-openid.aaf.userAutoEnabled=false
+userAutoEnabled=false
 # Flag to set the verified property of new users
-openid.aaf.userAutoVerified=false
+userAutoVerified=false
+
 # Property names to use when creating users
-openid.aaf.emailProperty=email
-openid.aaf.givenNameProperty=name
-openid.aaf.familyNameProperty=deliberately_unknown_property
+emailProperty=email
+givenNameProperty=name
+familyNameProperty=deliberately_unknown_property
