--- a/src/main/resources/openid-provider-sample-Google.properties
+++ b/src/main/resources/openid-provider-sample-Google.properties
@@ -5,33 +5,43 @@
 # 
 #
 # Needs to be 'openid'
-type=openid
-id=openid
+auth.method=openid
+
+# ID of the particular provider configuration
+provider.id=google
+
 # Name displayed in the UI
-name=OpenID Authentication Provider
+name=Google
+
 # Toggle username & password login visibility
 disableUsernamePasswordLogin=false
-# List of providers that appear on the login page, see options below.
-enabled=google
-# Site URL - the main domain, needed to build the pre-established URL below.
+
+# Site URL - the main domain of the client site (i.e. your XNAT), needed to build the pre-established URL below.
+# If not specified, the plugin uses the value configured for the site URL in the system preferences.
 siteUrl=
 preEstablishedRedirUri=/openid-login
+
 # Obtained when registering your app in Google
-openid.google.clientId=
-openid.google.clientSecret=
-openid.google.accessTokenUri=https://www.googleapis.com/oauth2/v3/token
-openid.google.userAuthUri=https://accounts.google.com/o/oauth2/auth
-openid.google.scopes=openid,profile,email
-openid.google.link=<p>To sign-in using your Google credentials, please click on the button below.</p></p><p><a href="/openid-login?providerId=google"> <img src="/images/btn_google_signin_dark_normal_web.png" /> </a></p>
+clientId=
+clientSecret=
+
+# URLs for accessing Google's OAuth2 services
+accessTokenUri=https://www.googleapis.com/oauth2/v3/token
+userAuthUri=https://accounts.google.com/o/oauth2/auth
+scopes=openid,profile,email
+link=<p>To sign-in using your Google credentials, please click on the button below.</p></p><p><a href="/openid-login?providerId=google"> <img src="/images/btn_google_signin_dark_normal_web.png" /> </a></p>
+
 # Flag that sets if we should be checking email domains
-openid.google.shouldFilterEmailDomains=false
+shouldFilterEmailDomains=false
+
 # Flag to force the user creation process, normally this should be set to false
-openid.google.forceUserCreate=true
+forceUserCreate=true
 # Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
-openid.google.userAutoEnabled=false
+userAutoEnabled=false
 # Flag to set the verified property of new users
-openid.google.userAutoVerified=false
+userAutoVerified=false
+
 # Property names to use when creating users
-openid.google.emailProperty=email
-openid.google.givenNameProperty=given_name
-openid.google.familyNameProperty=family_name
+emailProperty=email
+givenNameProperty=given_name
+familyNameProperty=family_name
