--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@
 
 buildscript {
     ext {
-        vXnat = '1.7.5.1'
-        vXnatPlugin = '1.7.5'
+        vXnat = "1.7.5.1"
+        vXnatPlugin = "1.7.5"
     }
     repositories {
         mavenLocal()
@@ -15,58 +15,48 @@ buildscript {
             url "https://plugins.gradle.org/m2/"
         }
         maven {
-            url 'https://nrgxnat.jfrog.io/nrgxnat/libs-release'
-            name 'XNAT Release Repository'
+            url "https://nrgxnat.jfrog.io/nrgxnat/libs-release"
+            name "XNAT Release Repository"
         }
         maven {
-            url 'https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot'
-            name 'XNAT Snapshot Repository'
+            url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot"
+            name "XNAT Snapshot Repository"
         }
     }
     dependencies {
         classpath "org.nrg.xnat.build:xnat-data-builder:${vXnatPlugin}"
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
-        classpath "gradle.plugin.com.palantir.gradle.gitversion:gradle-git-version:0.8.0"
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE"
+        classpath "io.franzbecker:gradle-lombok:1.14"
+        classpath "gradle.plugin.com.palantir.gradle.gitversion:gradle-git-version:0.12.0-rc2"
     }
 }
 
-group 'au.edu.qcif.xnat.openid'
-version '1.0.0-SNAPSHOT'
+group "au.edu.qcif.xnat.openid"
+version "1.0.0-SNAPSHOT"
 
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'groovy'
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-apply plugin: 'jacoco'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'xnat-data-builder'
-apply plugin: 'com.palantir.git-version'
+apply plugin: "com.palantir.git-version"
+apply plugin: "eclipse"
+apply plugin: "idea"
+apply plugin: "io.franzbecker.gradle-lombok"
+apply plugin: "io.spring.dependency-management"
+apply plugin: "jacoco"
+apply plugin: "java"
+apply plugin: "maven"
+apply plugin: "maven-publish"
+apply plugin: "xnat-data-builder"
 
 repositories {
     mavenLocal()
-    mavenCentral()
+    maven { url "https://www.dcm4che.org/maven2/" }
+    maven { url "http://maven.imagej.net/content/groups/public" }
     jcenter()
-    maven {
-        url 'https://nrgxnat.jfrog.io/nrgxnat/libs-release'
-        name 'XNAT Release Repository'
-    }
-    maven {
-        url 'https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot'
-        name 'XNAT Snapshot Repository'
-    }
-    maven {
-        url 'https://nrgxnat.jfrog.io/nrgxnat/ext-release'
-        name 'XNAT External Release Repository'
-    }
+    mavenCentral()
+    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
+    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
 }
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-
-mainClassName = "ValidateLdap"
 
 configurations {
     compile.extendsFrom(compileAndInclude)
@@ -84,6 +74,8 @@ dependencyManagement.imports {
 }
 
 dependencies {
+    annotationProcessor "org.nrg:framework"
+
     compileOnly "org.nrg.xnat:web"
     compileOnly "org.nrg.xnat:xnat-data-models"
     compileOnly "org.nrg.xdat:core"
@@ -93,7 +85,7 @@ dependencies {
     compileOnly "org.springframework.security:spring-security-config"
     compileOnly "org.springframework.security:spring-security-ldap"
     compileOnly "org.springframework.security:spring-security-web"
-	compileOnly "org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE"
+    compileOnly "org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE"
     compileOnly "org.springframework.security:spring-security-jwt:1.0.8.RELEASE"
     compileOnly "org.apache.commons:commons-lang3"
     compileOnly "org.hibernate.javax.persistence:hibernate-jpa-2.1-api"
@@ -114,10 +106,10 @@ if (hasProperty("rt.17.jar")) {
     def rt17jar = property "rt.17.jar"
     logger.info "Using ${rt17jar} as the bootstrap class path jar."
     gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) { task ->
-            task.options.fork = true
-            task.options.compilerArgs << "-XDignore.symbol.file"
-            task.options.bootClasspath = rt17jar as String
+        tasks.withType(JavaCompile) {
+            options.fork = true
+            options.compilerArgs << "-XDignore.symbol.file"
+            options.bootstrapClasspath = files(rt17jar as String)
         }
     }
 } else {
@@ -125,24 +117,24 @@ if (hasProperty("rt.17.jar")) {
     logger.warn "  ./gradlew -Prt.17.jar=rt-1.7.0_45.jar war\n"
 }
 
-jar {
-    manifest {
-        attributes 'Application-Name': 'XNAT OpenID Authentication Provider',
-                'Build-Date': new Date(),
-                'Implementation-Sha': gitVersion(),
-                'Implementation-Version': version
-    }
-	from {
-		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-	}
-}
-
 compileJava {
     options.fork = false
 }
 
+jar {
+    manifest {
+        attributes "Application-Name": "XNAT OpenID Authentication Provider",
+                "Build-Date": new Date(),
+                "Implementation-Sha": gitVersion(),
+                "Implementation-Version": version
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 jacoco {
-    toolVersion = dependencyManagement.importedProperties["jacoco.version"]
+    toolVersion dependencyManagement.importedProperties["jacoco.version"] as String
 }
 
 jacocoTestReport {
@@ -153,9 +145,14 @@ jacocoTestReport {
     }
 }
 
+lombok {
+    version = dependencyManagement.importedProperties["lombok.version"] as String
+    sha256 = dependencyManagement.importedProperties["lombok.checksum"] as String
+}
+
 task fatJar(type: Jar) {
     zip64 true
-    baseName = project.name + '-all'
+    baseName "${project.name}-all"
     from {
         configurations.compileAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
     } {
@@ -167,33 +164,29 @@ task fatJar(type: Jar) {
 sourceSets {
     main {
         java {
-            srcDir 'src/main/java'
-            srcDir 'build/xnat-generated/src/main/java'
+            srcDir "src/main/java"
+            srcDir "build/xnat-generated/src/main/java"
         }
         resources {
-            srcDir 'src/main/resources'
-            srcDir 'build/xnat-generated/src/main/resources'
+            srcDir "src/main/resources"
+            srcDir "build/xnat-generated/src/main/resources"
         }
     }
 }
 
-def propertyWithDefault(String name, Object value) {
-    hasProperty(name) ? property(name) : value
-}
-
-def sonatypeUsername = hasProperty('SONATYPE_USERNAME') ? sonatypeUsername : System.getProperty('SONATYPE_USERNAME')
-def sonatypePassword = hasProperty('SONATYPE_USERNAME') ? sonatypePassword : System.getProperty('SONATYPE_PASSWORD')
+def sonatypeUsername = hasProperty("SONATYPE_USERNAME") ? sonatypeUsername : System.getProperty("SONATYPE_USERNAME")
+def sonatypePassword = hasProperty("SONATYPE_USERNAME") ? sonatypePassword : System.getProperty("SONATYPE_PASSWORD")
 
 uploadArchives {
     repositories {
-       mavenDeployer {
+        mavenDeployer {
 
-             repository(url: "http://dev.redboxresearchdata.com.au/nexus/content/repositories/snapshots/") {
-             authentication(userName: sonatypeUsername, password: sonatypePassword)
-}
-             pom.version = "1.0.0-SNAPSHOT"
-             pom.artifactId = "openid-auth-plugin"
-             pom.groupId = "au.edu.qcif.xnat.openid"
-       }
+            repository(url: "http://dev.redboxresearchdata.com.au/nexus/content/repositories/snapshots/") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
+            pom.version = "1.0.0-SNAPSHOT"
+            pom.artifactId = "openid-auth-plugin"
+            pom.groupId = "au.edu.qcif.xnat.openid"
+        }
     }
 }
