--- a/src/main/resources/openid-provider-sample-Google.properties
+++ b/src/main/resources/openid-provider-sample-Google.properties
@@ -16,11 +16,6 @@ name=Google
 # Toggle username & password login visibility
 disableUsernamePasswordLogin=false
 
-# Site URL - the main domain of the client site (i.e. your XNAT), needed to build the pre-established URL below.
-# If not specified, the plugin uses the value configured for the site URL in the system preferences.
-siteUrl=
-preEstablishedRedirUri=/openid-login
-
 # Obtained when registering your app in Google
 clientId=
 clientSecret=
@@ -37,9 +32,9 @@ shouldFilterEmailDomains=false
 # Flag to force the user creation process, normally this should be set to false
 forceUserCreate=true
 # Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
-userAutoEnabled=false
+auto.enabled=false
 # Flag to set the verified property of new users
-userAutoVerified=false
+auto.verified=false
 
 # Property names to use when creating users
 emailProperty=email
