--- a/src/main/resources/openid-provider-sample-AAF.properties
+++ b/src/main/resources/openid-provider-sample-AAF.properties
@@ -6,9 +6,12 @@
 #
 # Needs to be 'openid'
 auth.method=openid
+provider.id=<id>
 
-# ID of the particular provider configuration
-provider.id=aaf
+# Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
+auto.enabled=false
+# Flag to set the verified property of new users
+auto.verified=false
 
 # Name displayed in the UI
 name=AAF
@@ -17,14 +20,14 @@ name=AAF
 disableUsernamePasswordLogin=false
 
 # AAF OpenID
-clientId=
-clientSecret=
+clientId=<clientId>
+clientSecret=<clientSecret>
 
 # URLs for accessing AAF's OAuth2 services
 accessTokenUri=https://central.test.aaf.edu.au/providers/op/token
 userAuthUri=https://central.test.aaf.edu.au/providers/op/authorize
 scopes=openid,profile,email
-link=<p>To sign-in using your AAF credentials, please click on the button below.</p><p><a href="/openid-login?providerId=aaf"><img src="/images/aaf_service_223x54.png" /></a></p>
+link=<p>To sign-in using your AAF credentials, please click on the button below.</p><p><a href="/openid-login?providerId=${providerId}"><img src="/images/aaf_service_223x54.png" /></a></p>
 
 # Flag that sets if we should be checking email domains
 shouldFilterEmailDomains=true
@@ -33,10 +36,6 @@ allowedEmailDomains=redboxresearchdata.com.au
 
 # Flag to force the user creation process, normally this should be set to true
 forceUserCreate=true
-# Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
-userAutoEnabled=false
-# Flag to set the verified property of new users
-userAutoVerified=false
 
 # Property names to use when creating users
 emailProperty=email
