--- a/src/main/resources/openid-provider-sample-Google.properties
+++ b/src/main/resources/openid-provider-sample-Google.properties
@@ -2,39 +2,40 @@
 # xnat-openid-auth-plugin: openid-provider-sample-Google.properties
 #
 # Copy to $XNAT_HOME/config/auth as 'openid-provider.properties'
-# 
+#
 #
 # Needs to be 'openid'
 auth.method=openid
+provider.id=<id>
 
-# ID of the particular provider configuration
-provider.id=google
+# Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
+auto.enabled=false
+# Flag to set the verified property of new users
+auto.verified=false
 
 # Name displayed in the UI
-name=Google
+name=<Display Name>
 
 # Toggle username & password login visibility
 disableUsernamePasswordLogin=false
 
 # Obtained when registering your app in Google
-clientId=
-clientSecret=
+clientId=<clientId>
+clientSecret=<clientSecret>
 
 # URLs for accessing Google's OAuth2 services
 accessTokenUri=https://www.googleapis.com/oauth2/v3/token
 userAuthUri=https://accounts.google.com/o/oauth2/auth
 scopes=openid,profile,email
-link=<p>To sign-in using your Google credentials, please click on the button below.</p></p><p><a href="/openid-login?providerId=google"> <img src="/images/btn_google_signin_dark_normal_web.png" /> </a></p>
+link=<p>To sign-in using your Google credentials, please click on the button below.</p></p><p><a href="/openid-login?providerId=${providerId}"> <img src="/images/btn_google_signin_dark_normal_web.png" /></a></p>
 
 # Flag that sets if we should be checking email domains
 shouldFilterEmailDomains=false
+# Domains below are allowed to login, only checked when 'shouldFilterEmailDomains' is true
+# allowedEmailDomains=<domains>
 
 # Flag to force the user creation process, normally this should be set to false
 forceUserCreate=true
-# Flag to set the enabled property of new users, set to false to allow admins to manually enable users before allowing logins, set to true to allow access right away
-auto.enabled=false
-# Flag to set the verified property of new users
-auto.verified=false
 
 # Property names to use when creating users
 emailProperty=email
