Modify username to be prefix of email + provider; remove overrides of VM files

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@
 buildscript {
     ext {
         vXnat = "1.7.6"
-		vXnatDev = "1.7.6"
+		vXnatDev = "1.7.7.RAD-SNAPSHOT"
     }
     repositories {
         mavenLocal()
